@@ -13,7 +13,7 @@
 <body>
     <p>You should see a clipped video surrounded by a thick green border.</p>
     <p><a href="https://bugs.webkit.org/show_bug.cgi?id=35555">https://bugs.webkit.org/show_bug.cgi?id=35555</a></p>
-    <object type="video/quicktime" data="../../../LayoutTests/media/content/test.mp4" width="200" height="150">
+    <object type="video/quicktime" data="../../../../LayoutTests/media/content/test.mp4" width="200" height="150">
         <param value="false" name="autoplay">
         <param value="false" name="controller">
     </object>
