@@ -166,36 +166,36 @@
     The following image SHOULD change when the pointer is over it.
   </p>
 
-  <img id="f" src="../../LayoutTests/media/content/abe.png">
+  <img id="f" src="../../../LayoutTests/media/content/abe.png">
 
   <p>
     The following image SHOULD NOT change when the pointer is over it.
   </p>
 
-  <img id="g" src="../../LayoutTests/media/content/abe.png">
+  <img id="g" src="../../../LayoutTests/media/content/abe.png">
 
   <p>
     The following image SHOULD change when the pointer is over it. It is inline
     with this paragraph.
-    <img id="h" src="../../LayoutTests/media/content/abe.png">
+    <img id="h" src="../../../LayoutTests/media/content/abe.png">
   </p>
 
   <p>
     The following image SHOULD NOT change when the pointer is over it. It is inline
     with this paragraph.
-    <img id="i" src="../../LayoutTests/media/content/abe.png">
+    <img id="i" src="../../../LayoutTests/media/content/abe.png">
   </p>
 
   <p id="j">
     This paragraph SHOULD NOT change when the pointer is over only it, but the child
     image SHOULD react and cause the parent to change.
-    <img id="k" src="../../LayoutTests/media/content/abe.png">
+    <img id="k" src="../../../LayoutTests/media/content/abe.png">
   </p>
 
   <p id="l">
     This paragraph SHOULD change when the pointer is over it, but the child
     image SHOULD NOT react.
-    <img id="m" src="../../LayoutTests/media/content/abe.png">
+    <img id="m" src="../../../LayoutTests/media/content/abe.png">
   </p>
 
   
