@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="../../LayoutTests/media/video-test.js"></script>
+        <script src="../../../LayoutTests/media/video-test.js"></script>
         <script>
 
             var seekedCount = 0;
